k8s/apps/srvc-media/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: srvc-media
  namespace: apps
  labels:
    app: srvc-media
spec:
  replicas: 1 # TODO: make it 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: srvc-media
  template:
    metadata:
      labels:
        app: srvc-media
    spec:
      imagePullSecrets:
        - name: pull-secret
      containers:
        - name: srvc-media
          image: registry.cri.epita.fr/ing/majeures/tc/info/student/2026/2025-epitweet-tinyx-02/srvc-media:v1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "256Mi"
              cpu: "125m"
            limits:
              memory: "512Mi"
              cpu: "250m"
