k8s/apps/srvc-media/service.yml
---
kind: Service
apiVersion: v1
metadata:
  name: srvc-media
  namespace: apps
  labels:
    app: srvc-media
spec:
    type: ClusterIP
    selector:
      app: srvc-media
    ports:
      - protocol: TCP
        port: 8080
        targetPort: 8080
